# genov

./: .gitignore  .gitmodules  Makefile  README.md  classes.py  diff.txt  echo  gen.py  genacc.py  gmon.out  list_modules.txt  main.py  requirements.txt  run_gen.py  setup.py  specialization.py  template.txt  test.py  test.txt
acc_lib/: Makefile
acc_lib/MMUL_OPT/: note.txt
acc_lib/MMUL_TCDM/: note.txt
doc/how-to/: verif.md
engine_dev/: .gitignore
genacc/: .gitignore  classes.py  collector.py  emitter.py  genacc.py  generator.py  git-deploy.py  test_tmp.txt
genacc/engine_dev/: .gitignore
genacc/output/: .gitignore
genacc/static/static_tb/inc/ref_sw/: CMakeLists.txt  Makefile
genacc/static/static_tb/inc/ref_sw/src/: main.c
genov/: .gitignore  emitter.py  genacc.py  genacc_env.py  generate_acc.py  generate_cluster.py  generate_ov.py  generate_ov_libs.py  generate_ov_test.py  generate_soc.py  generate_wrapper.py  generate_wrapper_test.py  generator.py  genov.py  genov_env.py  initializer.py  main.py  optimize_ov.py  optimizer.py  optov.py  paths.py
genov/dev/: .gitignore
genov/output/: .gitignore
genov/python/: collector.py  emitter.py
output/: .gitignore
scripts/: clean_overlay.sh  gen.config
scripts/git-deploy/: git-deploy.py  git-deploy.sh
scripts/ov-deploy/: ov-deploy.sh  secure_paths.sh
scripts/py-env/: secure_paths.sh  update_reqs.sh
scripts/py_env/: init_py_env.sh  init_venv.sh  run_gen.sh  secure_paths.sh  update_reqs.sh
to_be_gen/: Bender.yml  Bender_cl.yml  Bender_top.yml  Bender_wr.yml
utils/: secure_paths.sh
(+1325 files in other folders)
